Committed draft as of 7 Nov 2010

--- a/executive.tex
+++ b/executive.tex
@@ -7,13 +7,9 @@
 The President shall oversee and coordinate all MSA activities and be the chief spokesperson for MSA unless otherwise specified in the Code or Constitution.
 \subsubsection{Appointment powers.}
 \subsubsubsection{Executive Committee.}
-The President shall have the authority to appoint a Treasurer, Student General Counsel, Chief of Staff, and Chief Programming Officer to the Executive Committee, which shall advise the President on all pertinent matters. The President may call the Executive Committee into session at any time, and shall serve as its chair in session.
+The President shall have the authority to appoint a Treasurer, Student General Counsel, Chief of Staff, and Chief Programming Officer to the Executive Committee, which shall advise the President on all pertinent matters.  These appointments shall be made with the advice and consent of the Assembly, to be determined by a simple majority vote.  The President may likewise recall these officers with a two-thirds majority vote of the Assembly.  The President may call the Executive Committee into session at any time, and shall serve as its chair in session.
 \subsubsubsection{University-wide Committees.}
-The President shall also appoint student representatives to university-wide committees.
-\subsubsubsection{Confirmation.}
-All Executive appointments shall be made with the advice and consent of the Assembly, to be determined by a simple majority vote.
-\subsubsubsection{Recall.}
-The President may likewise recall these officers with a two-thirds majority vote of the Assembly. 
+The President shall also appoint student representatives to university-wide committees.  These appointments shall be made with the advice and consent of the Assembly, to be determined by a simple majority vote.  The President may likewise recall these officers with the written concurrence of three other executives.
 	
 \subsubsection{Executive Commissions.}
 The President may appoint Executive Commissions to study issues on campus, publish reports concerning issues under such purview, and recommend to the Executive Branch such measures as they shall deem appropriate.
@@ -24,8 +20,16 @@ The President may call into session the Assembly or the University Council at th
 \subsubsection{Recommend Measures to the Assembly.}
 The President and Vice President may, jointly or severally, recommend to the Assembly for its consideration such measures as they shall deem appropriate.
 
-\subsubsection{State of the Assembly.}
-The President shall, prior to the end of each academic year, submit to the Assembly and the students at large, a report of the state of student government and of the student body.
+\subsubsection{Reports.}
+
+\subsubsubsection{State of the Students.}
+Within the first month of the fall and winter semesters, the President shall submit to the Assembly and to the students at large a report of the state of student government and of the student body.
+
+\subsubsubsection{Transition.}
+Before the end of her term, the outgoing President shall prepare a report for her successor to facilitate the transition between administrations.
+
+\subsubsubsection{Regents.}
+The President shall make any reports to the University of Michigan Board of Regents available to the Assembly and the students at large before their presentation to the Regents.
 
 
 \subsection{Vice President.}
@@ -52,7 +56,12 @@ The Chief of Staff shall oversee attendance and procedural policies at meetings 
 The Chief Programming Officer shall serve as principal advisor to the President on matters of student programming, assist executive commissions in the long-range planning and execution of their mandate, and supervise the communications of the Central Student Government. The Chief Programming Officer may serve as a non-voting \textit{ex-officio} member of any legislative body concerning campus communication.
 
 
-\section{Commissions.}  The following classification scheme for commissions is for organizational purposes, and is not intended to establish any ranking or hierarchy of commissions or classification of commissions.  All commissions and classifications of commissions are equal under this Code.
+\section{The Executive Committee.}
+The Executive Committee shall be comprised of the Executive Officers and the Speaker of the Assembly.  The President may call the Executive Committee into session at any time, and shall serve as its chair in session.
+
+
+\section{Commissions.}
+The following classification scheme for commissions is for organizational purposes only, and is not intended to establish any ranking or hierarchy of commissions or classification of commissions.  All commissions and classifications of commissions are equal under this Code.
 
 \subsection{Logistical Commissions.}
 
@@ -60,7 +69,17 @@ The Chief Programming Officer shall serve as principal advisor to the President 
 The Student Organization Funding Commission (``SOFC'') shall review applications for funding from student organizations, and shall submit student organization funding recommendations to the Assembly.
 
 \subsubsection{}
-The Campus Governance Commission (``CGC'') shall assist the President in identifying candidates suitable for nomination to University-wide committees and facilitate communications between MSA and its appointees to University committee.
+The Campus Governance Commission (``CGC'') shall
+\subsubsubsection{}
+assist the President in identifying candidates suitable for nomination to University-wide committees;
+\subsubsubsection{}
+facilitate communications between MSA and its appointees to University committees; 
+\subsubsubsection{}
+maintain a list of committees to which MSA makes appointments;
+\subsubsubsection{}
+maintain a list of students appointed to University committees; and
+\subsubsubsection{}
+shall collect mandatory reports from appointees that will be included in the end of semester MSA reports.
 
 \subsubsection{}
 The External Relations Commission (``ERC'') shall
@@ -76,16 +95,7 @@ maintain contact with other college and university student governments and assoc
 Elect a liaison who shall attend Ann Arbor city council meetings and report back to the committee with any information he/she may find pertinent.
 
 \subsubsection{}
-The Alumni Relations Commission (``ARC'') shall:
-\subsubsubsection{}
-build and strengthen the relationship between the Assembly and its alumni;
-\subsubsubsection{}
-hold a formal event celebrating MSA seniors' graduation each spring
-\subsubsubsection{}
-coordinate with the Communications Committee and the Chief of Staff to send  a semesterly MSA update / newsletter to the alumni.
-
-\subsubsection{}
-The Communications Commissions (``Communications'') shall
+The Communications Commission (``Communications'') shall
 \subsubsubsection{}
 facilitate all communication between MSA and students;
 \subsubsubsection{}
@@ -105,22 +115,31 @@ carry out its duties in a fair and equitable manner to all constituents while re
 \subsection{Identity Commissions}
 
 \subsubsection{}
-The Lesbian, Gay, Bisexual \& Transgender Issues Commission (``LGBT'') shall monitor and work toward the improvement of student life for lesbian, gay, bisexual and transgender students, and shall facilitate communication between relevant student organizations.
+The Diversity Affairs Commission (``DAC1'') shall monitor and work toward the improvement of diversity in student life, and facilitate communication between relevant student organizations.
+
+\subsubsection{}
+The Lesbian, Gay, Bisexual \& Transgender Issues Commission (``LGBT'') shall monitor and work toward the improvement of student life for lesbian, gay, bisexual, transgender and ally students, and shall facilitate communication between relevant student organizations.
 
 \subsubsection{}
 The Women's Issues Commission (``WIC'') shall monitor and work toward the improvement of student life for all women on campus, shall strive to educate the university community on women's issues and shall facilitate communication between relevant student organizations.
 
 \subsubsection{}
-The Multicultural Affairs Commission (``MAC'') shall monitor and work toward the improvement of ethnic and cultural diversity in student life, shall strive to educate the university community on issues regarding underrepresented minorities on campus, and shall facilitate communication between relevant student organizations.
+The Minority Affairs Commission (``MAC'') shall strive to educate the university community on issues regarding underrepresented minorities on campus, and shall facilitate communication between relevant student organizations.
 
 \subsubsection{}
 The International Student Affairs Commission (``ISAC'') shall monitor and work toward the improvement of student life for all international students on campus, and facilitate communication between relevant student organizations.
 
 \subsubsection{}
-The Disability Affairs Commission (``DAC'') shall support and advocate for students with disabilities on campus.
+The Transfer Student Affairs Commission (``TSAC'') shall monitor and work toward the improvement of student life for all transfer students on campus, and facilitate communication between relevant student organizations.
+
+\subsubsection{}
+The Disability Affairs Commission (``DAC2'') shall support and advocate for students with disabilities on campus, and facilitate communication between relevant student organizations.
 
 \subsubsection{}
 The North Campus Affairs Commission (``NCAC'') shall monitor and work toward the improvement of student life for all students who live and study on North Campus, and shall facilitate communication between relevant student organizations.
+
+\subsubsection{}
+The Greek Relations Commission (``GRC'')
 
 
 \subsection{Issue Commissions}
@@ -131,12 +150,12 @@ The Campus Improvement Commission (``CIC'') shall foster communication between M
 \subsubsection{}
 The Academic Affairs Commission (``AAC'') shall 
 \subsubsubsection{}
-monitor and work toward the improvement of the academic experience of all students;
+monitor and work toward the improvement of the academic experience of all students; and
 \subsubsubsection{}
-be responsible for the administration of Advice Online.
+communicate with school and college governments, the Senate Advisory Committee on University Affairs (SACUA), and any other University body pertaining to academics.
 
 \subsubsection{}
-The Campus Safety Commission (``CSC'') shall promote the safety of all students on campus, educate students on safety issues, and facilitate communication between relevant student organizations.
+The Student Safety Commission (``SSC'') shall promote the safety of all students, on or off campus; educate students on safety issues; and facilitate communication between relevant student organizations.
 
 \subsubsection{}
 The Environmental Issues Commission (``EIC'') shall
@@ -164,3 +183,21 @@ assist C-CAB in advocating for the adoption of the recommended changes to the St
 
 \subsubsection{}
 The Voice Your Vote Commission (``VYV'') shall, without engaging in partisan political activity, promote political awareness and participation among the University community.
+
+
+\section{Commission Composition and Leadership.}
+
+\subsection{Composition.}
+Unless otherwise specified in the Code, any student, faculty member, or staff member of the University may serve on any MSA commission.
+
+\subsection{Commission Chairs.}
+The President shall, with the consent of a simple majority of the Assembly, appoint Commission chairs, who shall not be considered officers of the Central Student Government.  The President may remove a
+Commission chair with the written concurrence of three other executives.
+
+\subsection{Other Commission Officers.}
+Members of the Commission may elect from among their number any other officers they deem expedient.
+
+
+\section{The Cabinet.}
+
+The Cabinet shall be comprised of the Executive Committee and the Commission Chairs.  The President may call the Cabinet into session at any time, and shall serve as its chair in session.
