--- a/organizations.tex
+++ b/organizations.tex
@@ -128,16 +128,16 @@ Student organization ex-officio members shall have all the rights of a regular a
 Student organization funding during the academic year will be determined by the Student Organization Funding Commission (SOFC).  The SOFC shall consider funding requests for all student organizations and their events under the guidelines established below.
 
 \subsection{Leadership.}
-The President shall, with the advice and consent of the Assembly, appoint a Chair of the SOFC.  The Chair is a non-voting member.
+The President shall, with the advice and consent of the Assembly, appoint a Chair of the SOFC.  The Chair is a non-voting member.  The SOFC may elect from among their number any other officers they deem expedient.
 
 \subsection{Membership.}
-The SOFC must have at least ten (10) but no more than twenty (20) voting members.  More than half of the voting members must be Assembly representatives.  The President shall, with the advice and consent of the Assembly and the SOFC Chair, appoint the members of the SOFC.
+The SOFC must have at least ten (10) but no more than twenty (20) voting members.  At least half of the voting members must be Assembly representatives.  The President shall, with the advice and consent of the Assembly and the SOFC Chair, appoint the members of the SOFC.  The President may remove any member of the SOFC with the written concurrence of three other executives.
 
 \subsection{Schedule.}
 Each semester shall consist of at least two funding cycles.  The exact dates of these funding cycles shall be determined by the SOFC Chair.
 
 \subsection{Structure.}
-For each funding cycle, the SOFC shall divide its membership into a Reviews Board and an Appeals Board.  The Reviews Board shall recommend allocations to the Assembly.  Any organization may appeal its recommended allocation to the Appeals Board, which shall hear the organization's oral appeal upon request by the organization.  Each Board must have at least five (5) but no more than ten (10) voting members.  Each Board must maintain a majority of voting Assembly representatives.  No voting member of the Reviews Board may serve as a voting member of the Appeals Board within any particular funding cycle.
+For each funding cycle, the SOFC shall divide its membership into a Reviews Board and an Appeals Board.  The Reviews Board shall recommend allocations to the Assembly.  Any organization may appeal its recommended allocation to the Appeals Board, which shall hear the organization's oral appeal upon request by the organization.  Each Board must have at least five (5) but no more than ten (10) voting members.  At least half of each Board must be voting Assembly representatives.  No voting member of the Reviews Board may serve as a voting member of the Appeals Board within any particular funding cycle.
 
 \subsection{Voting Rights}
 \subsubsection{}
