Committed draft as of 11 Nov 2010

--- a/code.tex
+++ b/code.tex
@@ -27,9 +27,9 @@
 
 \begin{document}
 	\renewcommand{\thepage}{\roman{page}}
-	\title{Michigan Student Assembly Compiled Code (draft) \\
+	\title{Michigan Student Assembly Compiled Code \\
 			\large \includegraphics[width=5in]{2008_msa_color_logo} \\
-			Last revised: \VCDateISO \\
+			Adopted: 16 Nov 2010 \\
 			Revision ID: {\tt \GITAbrHash} \\
 			%Adopted:
 			}
@@ -38,7 +38,7 @@
 			Rules \& Elections Committee Chair
 				\and
 			\line(1,0){175} \\
-			Gabriel C.~Suprise \\
+			Timothy A.~Bekkers \\
 			Student General Counsel}
 	\date{}
 	\maketitle
@@ -51,6 +51,10 @@
 	\headheight 35pt
 	\thispagestyle{empty}
 	\linenumbers
+	
+	\begin{center}
+			\Large Michigan Student Assembly Compiled Code
+	\end{center}
 
 	\input{general}
 	
