--- a/elections.tex
+++ b/elections.tex
@@ -18,7 +18,7 @@
 ``Candidate's Meeting'' shall mean a preliminary meeting that all interested election candidates must attend before the campaign period starts. The meeting is mandatory for all those who apply for candidacy and wish to appear on the election ballot. Failure to attend the meeting may result in an automatic assessment of 1 demerit for the candidate, to be given by the University Elections Commission.
 
 \subsection{}
-``Demerit'' shall mean a mark awarded against a candidate and/or party for fault or offence \todo{\textit{sic}} that is in violation of the Election Code. Any candidate who accrues 5 or more demerits will be removed from the election, and any party that receives 10 or more demerits will be automatically removed from the election. Demerits will be assessed by the University Elections Commission.
+``Demerit'' shall mean a mark awarded against a candidate and/or party for fault or offense that is in violation of the Election Code. Any candidate who accrues 5 or more demerits will be removed from the election, and any party that receives 10 or more demerits will be automatically removed from the election. Demerits will be assessed by the University Elections Commission.
 
 \subsection{}
 ``Referendum'' shall mean any referendum, initiative, recall, or constitutional amendment to be voted upon by students in an election.
@@ -63,9 +63,9 @@ No later than 18 hours after the Election Director delivers unofficial results f
 \subsubsection{}
 No later than 24 hours after any decision of the University Elections Commission, any appeal of that University Elections Commission decision must be delivered to CSJ.
 \subsubsection{}
-At the first Steering Committee meeting after the end of the election, the Election Director shall announce official election results.
+At the first Assembly meeting after the end of the election, the Election Director shall announce official election results.
 \subsubsection{}
-At the first Assembly meeting following the Steering Committee meeting at which official election results are announced, the term of incumbent representatives shall expire and the term of newly-elected representatives shall commence. 
+Ten days after the announcement of the official election results, the term of incumbent representatives shall expire and the term of newly-elected representatives shall commence. 
 
 
 \section{Election Staff.}
@@ -104,7 +104,7 @@ The Election Director shall preside over meetings of the University Election Com
 The University Elections Commission shall be composed of at least five enrolled students, including at least one member from the Assembly and at least one member from the University Council.  No candidate may serve on the University Elections Commission. 
 
 \subsubsection{Appointment.}
-The Student General Counsel shall submit nominations for membership on the University Elections Commission to the Steering Committee, which shall submit the nominations to the Assembly for confirmation.  The Assembly may approve all, none, or any of the nominations, and may amend the composition of the University Elections Commission.  Confirmation of the University Elections Commission shall be upon a motion, second, and majority vote of the Assembly.
+The Student General Counsel shall submit nominations for membership on the University Elections Commission to the University Council, which shall submit the nominations to the Assembly for confirmation.  The Assembly may approve all, none, or any of the nominations, and may amend the composition of the University Elections Commission.  Confirmation of the University Elections Commission shall be upon a motion, second, and majority vote of the Assembly.
 
 \subsubsection{Removal.}
 The University Council may, by a two-thirds vote, remove any member of the University Elections Commission.  If a removal from the University Elections Commission results in an University Elections Commission membership that does not meet the requirements of the Election Code, the appointment process shall recommence.
@@ -229,7 +229,7 @@ No campaign materials may be affixed on or in any University building.  Residenc
 No candidate may move or obscure the campaign material of another candidate or party.  A student removing campaign material from her private property is not in violation of this rule.
 \subsubsubsection{Implying Elected Incumbency.}
 No printed campaign material for any candidate may imply incumbency if the candidate is not a current representative on MSA.  Candidates appointed to MSA may use the word ``retain'' on their printed campaign material but may not use the word ``re-elect''.  No more than one violation may be assessed per day.
-\subsubsubsection{Not Attending a Mandatory Candidates' Meeting.}  Candiates \todo{\textit{sic}} wishing to be placed on the ballot and having submitted a complete candidacy application on time that fail to attend a mandatory candidates' meeting shall be in violation of this rule. Candidates may not be found to be in violation of this rule more than once per election cycle.
+\subsubsubsection{Not Attending a Mandatory Candidates' Meeting.}  Candidates wishing to be placed on the ballot and having submitted a complete candidacy application on time that fail to attend a mandatory candidates' meeting shall be in violation of this rule. Candidates may not be found to be in violation of this rule more than once per election cycle.
 
 \subsubsection{Major Infractions.}
 Any violation will result in the assessment of two to four demerits.
@@ -239,7 +239,7 @@ Any campaign material claiming endorsement from any person or group of people th
 No candidate may destroy, deface, remove, or alter the campaign material of another candidate or party. A student removing campaign material from her private property is not in violation of this rule.
 Influencing a Student While Voting Prohibited.  No candidate may influence any student while the student is voting. The mere presence of a candidate in the vicinity of a voter while voting shall not constitute a violation of this rule. 
 \subsubsubsection{Inappropriate and irresponsible use of email privileges prohibited.}
-No party or candidate may knowingly send an unsolicited electionic \todo{\textit{sic}} communication or email to members of the University Community. The following actions will also be prohibited under this rule: harvesting addresses from the University of Michigan online directory, running mass-mail programs, sending campaign email to individuals that are not students, and sending campaign email to groups or email lists that the sender does not own.
+No party or candidate may knowingly send an unsolicited electronic communication or email to members of the University Community. The following actions will also be prohibited under this rule: harvesting addresses from the University of Michigan online directory, running mass-mail programs, sending campaign email to individuals that are not students, and sending campaign email to groups or email lists that the sender does not own.
 
 \subsubsection{Egregious Infractions.}
 Any violation will result in the assessment of at least 4 demerits.
@@ -273,7 +273,7 @@ If the University Elections Judiciary determines that the campaign rule was viol
 \subsubsubsection{}
 If the University Elections Judiciary determines that the campaign rule was violated by a person working in coordination with more than one candidate, the University Elections Judiciary must assess the demerits at full value against all offending candidates.
 \subsubsubsection{}
-If the University Elections Judiciary determines that the campaign rule was violated by a person working in coordination with a party, the University Elections Judiciary must assess the demerits at full value against all candidates of the party.\todo{Note that this is very different than the \textit{status quo}, and might be reverted to the \textit{status quo}}
+If the University Elections Judiciary determines that the campaign rule was violated by a person working in coordination with a party, the University Elections Judiciary must assess the demerits at full value against all candidates of the party.
 
 \subsection{Election Complaint Procedures.}
 \subsubsection{Receipt and Disbursement.}
@@ -331,7 +331,7 @@ The respondent and/or petitioner may appeal any decision of the University Elect
 \subsection{Eliminating Derogatory Write-In Votes.}
 Immediately following the completion of the election, the University Elections Commission shall review the election results and eliminate any write-in responses they deem to be inappropriate and/or offensive.
 \subsection{Release of Results.}
-Unofficial results, with derogatory write-in votes deleted but noting the number of derogatory write-in votes that were removed, are to be released to candidates and parties no later than 24-hours after the completion of the election. Official results, noting the number of write-in votes deemed derogatory and removed, shall be posted on the MSA website immediately after being approved by MSA Steering.
+Unofficial results, with derogatory write-in votes deleted but noting the number of derogatory write-in votes that were removed, are to be released to candidates and parties no later than 24-hours after the completion of the election. Official results, noting the number of write-in votes deemed derogatory and removed, shall be posted on the MSA website immediately after being approved by the Assembly.
 \subsection{Seating of New Members.}
 Newly elected members and officers of MSA will begin their term of office at the regular Assembly meeting to occur at 7:30 P.M. on the first Tuesday following the University Council meeting at which the official election results are announced.  MSA officers and members will remain in office until the seating of their successors (unless removed from office by methods specified in the All-Campus Constitution).  The President will, before beginning his/her term in office, swear to affirm the following oath: ``I promise to faithfully execute the office of Michigan Student Assembly President.''  This oath will be administered by the Chief Justice of the Central Student Judiciary.  The Executive Vice President will, before beginning his/her term of office, swear to affirm the following oath: ``I promise to faithfully execute the office of Michigan Student Assembly Vice President.''  This oath will be administered by the Associate Chief Justice of the Central Student Judiciary.
 \subsection{Appeals in Progress.}
@@ -400,7 +400,7 @@ Any seats that are vacant or held by appointment will be up for election as half
 \subsection{}
 All-campus elections for the two representative seats on the Department of Public Safety Oversight Committee shall be held in concurrence with the November and March elections.
 \subsection{}
-That \todo{\textit{sic}} each election shall seat a student on the DPS Oversight Committee for a period of 1 year, with the runner-up acting as the backup Representative should the elected Representative resign.
+Each election shall seat a student on the DPS Oversight Committee for a period of 1 year, with the runner-up acting as the backup Representative should the elected Representative resign.
 \subsection{}
 The rules and procedures for this election shall follow the same rules and procedures outlined for Michigan Student Assembly elections.
 
