--- a/executive.tex
+++ b/executive.tex
@@ -139,8 +139,7 @@ The Disability Affairs Commission (``DAC2'') shall support and advocate for stud
 The North Campus Affairs Commission (``NCAC'') shall monitor and work toward the improvement of student life for all students who live and study on North Campus, and shall facilitate communication between relevant student organizations.
 
 \subsubsection{}
-The Greek Relations Commission (``GRC'')
-
+The Greek Relations Committee ("GRC") is responsible for strengthening the relationship between MSA and the Greek community at Michigan. The committee's goal is to ensure that Greek Life is well integrated into the larger University community, to keep campus involved in Greek-sponsored events, and to act as a resource for the Greek community.
 
 \subsection{Issue Commissions}
 
