--- a/finance.tex
+++ b/finance.tex
@@ -53,7 +53,7 @@ The chair of a committee, commission, or select committee may spend money from t
 \subsubsubsection{}
 \$150 with the consent and signature of an executive officer;
 \subsubsubsection{}
-\$250 with the consent and signature of an executive officer and the a two-thirds vote of the Steering Committee;
+\$250 with the consent and signature of an executive officer and the a two-thirds vote of the Executive Committee;
 \subsubsubsection{}
 any amount with the consent and signature of an executive officer and the approval of a majority of the Assembly.
 \subsubsection{}
@@ -64,19 +64,19 @@ Upon presentation of the appropriate receipts, the Administrative Coordinator wi
 Alterations to an individual committee, commission or select committee budget after the MSA budget has been passed through the budget enacting process must be approved by the Executive Officers.
 
 \subsection{Operations Disbursements.}
-Any executive officer, by her consent and signature, may authorize the allocation of up to \$250 from the Operations account for supplies without the prior authorization of the Steering Committee or the Assembly.
+Any executive officer, by her consent and signature, may authorize the allocation of up to \$250 from the Operations account for supplies without the prior authorization of the Assembly.
 
 \subsection{Payroll Disbursements.}
 \subsubsection{}
-Any executive officer, by her consent and signature, may authorize the disbursement of salary from the Payroll Account to part-time MSA staff without the prior authorization of the Steering Committee or the Assembly.  
+Any executive officer, by her consent and signature, may authorize the disbursement of salary from the Payroll Account to part-time MSA staff without the prior authorization of the Assembly.  
 \subsubsection{}
-The Director or Assistant Director of the Office of Student Activities and Leadership, by her consent and signature, may authorize the disbursement of salary from the Payroll Account to full-time MSA staff without prior approval of the Steering Committee or the Assembly.
+The Director or Assistant Director of the Office of Student Activities and Leadership, by her consent and signature, may authorize the disbursement of salary from the Payroll Account to full-time MSA staff without prior approval of the Assembly.
 
 \subsection{Authorized Account Signatures.}
 \subsubsection{}
 Expenditures from any MSA account shall require two authorized signatures.  All MSA executive officers and the MSA Administrative Coordinator shall be authorized to approve expenditures from every MSA account.  Committee, commission, and select committee chairs shall be authorized to approve expenditures only from that committee, commission, or select committee account.  Persons acting as chair shall not be authorized to approve expenditures from any account.  
 \subsubsection{}
-The Steering Committee or the Assembly, upon a motion, second, and a vote, may authorize any person to approve expenditures from any MSA account.
+The Assembly, upon a motion, second, and a vote, may authorize any person to approve expenditures from any MSA account.
 
 \subsection{Disbursements to External Organizations.}
 Per Article VI, Section H of the All-Campus Constitution, no disbursement from any MSA account to an external organization shall be approved without a majority vote of the Assembly. 
