Revised CSJ jurisdiction, procedures, and courts

--- a/judicial.tex
+++ b/judicial.tex
@@ -7,25 +7,23 @@ This section is superseded by the Constitution but supersedes all other sections
 \subsection{Central Student Judiciary.}
 CSJ will serve as the principal student judiciary and as the judicial branch of the all-campus student government provided for in Article IV of the Constitution.  It has primary responsibility for enforcing the Constitution and for adjudicating disputes arising out of the Constitution, Compiled Code and other legislation enacted pursuant to the Constitution.
 \subsection{Jurisdiction.}
-CSJ has jurisdiction over actions where there is no other judicial body with jurisdiction or where it is not clear which judiciary has jurisdiction.  CSJ has original jurisdiction in all disputes concerning which body shall hear a particular action.
+CSJ may hear appeals from inferior courts, challenges under this Constitution and the Compiled Code, Central Student Government elections, and any other case they deem appropriate.
 
 \subsection{CSJ Structure and Membership.}  See also Article IV of the Constitution.
-\subsubsection{}
+\subsubsection{Officers.}
 The officers of CSJ (Chief Justice, Associate Chief Justice, Administrative Justice) will be elected from among the members of CSJ following the appointment of new members each term.  The Associate Chief Justice will serve as Acting Chief Justice if the Chief Justice is unable to perform a duty required of the office.  If both the Chief Justice and the Associate Chief Justice are unable to perform the duties required of the Chief Justice, CSJ will elect an Acting Chief Justice from its membership to serve until either the Chief Justice or Associate Chief Justice is able to serve or until the next election of officers.
-\subsubsection{}
+\subsubsection{Overlapping Membership Permitted.}
 Except where specifically provided for elsewhere in this section, courts of CSJ may have partially or completely overlapping memberships.
-\subsubsection{}
+\subsubsection{Conflicts of Interest.}
 If an action raises a conflict of interest for a member of CSJ, that member cannot hear the action, either in CSJ's original jurisdiction or on appeal.  No member of CSJ, including the Chief Justice, who heard an action at trial, may hear an appeal on the action.
-\subsubsection{}
+\subsubsection{Vacancies.}
 The Chief Justice can fill any vacancies in any CSJ court from the membership of CSJ as necessary.
 
 \subsection{CSJ Procedures.}
-This section, as well as the CSJ Manual of Judicial Procedure and CSJ Manual of Administrative Procedure, will form the Manual of Procedure mandated in the Constitution.  The CSJ Manual of Judicial Procedure will govern all judicial proceedings before any court of CSJ.
+This section, as well as the CSJ Manual of Procedure, will form the Manual of Procedure mandated in the Constitution.  The CSJ Manual of Procedure will govern all judicial proceedings before any court of CSJ.
 
 \subsection{CSJ Courts.}
-\subsubsection{}
-General Hearing Courts have original jurisdiction in each action within the jurisdiction of CSJ except for those specifically within the jurisdiction of an Election Court.  A new General Hearing Court is created each time a case arises and serves until the case is disposed.  The General Hearing Court consists of three CSJ members, one of whom will be the Presiding Justice of the court.  The Chief Justice of CSJ appoints members of the General Hearing Court and designates the Presiding Justice.  The Chief Justice can serve on the court and can designate him or herself Presiding Justice.
-\subsubsection{}
-Election Courts have the powers given to the ``Election Board'' in the MSA Constitution (note that this is not the same as the ``Election Board'' constituted by MSA in the section on ``Election Code'').  The Election Court has jurisdiction over any action arising out of MSA general or special elections.  The Election Court has jurisdiction over all actions arising under the ``Election Code'', the ``Code on Petitions and Ballot Questions'', and the section on ``Seat Reapportionment''.  A new Election Court is created for each election.  The Election Court consists of three members of CSJ, one of whom will be the Presiding Justice of the court.  The Chief Justice of CSJ has the same powers over the Election Court as s/he does over the General Hearing Courts.
-\subsubsection{}
+\subsubsection{General Hearing Courts.}
+General Hearing Courts have original jurisdiction in each action within the jurisdiction of CSJ.  A new General Hearing Court is created each time a case arises and serves until the case is disposed.  The General Hearing Court consists of three CSJ members, one of whom will be the Presiding Justice of the court.  The Chief Justice of CSJ appoints members of the General Hearing Court and designates the Presiding Justice.  The Chief Justice can serve on the court and can designate him or herself Presiding Justice.
+\subsubsection{Appellate Courts.}
 Appellate Courts have appellate jurisdiction in each action within the jurisdiction of CSJ.  A new Appellate Court is appointed by the Chief Justice of CSJ each time a case arises, and serves until disposition of the case.  The Appellate Court consists of all members of CSJ who are not disqualified or unable to serve for other reasons and in no case less than three justices.  One of the justices will be designated as the Presiding Justice of the court.  If the Chief Justice of CSJ serves on the court, he or she can serve as the Presiding Justice; otherwise the court will select a Presiding Justice from its membership.
